# OptGraphColoring

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  out.txt
Common/cmake/: CMakeLists.txt
Common/include/: logger.hpp  report.hpp
EuclidianTSP/: .gitignore  CMakeLists.txt
EuclidianTSP/app/: benchmark.cpp  lk_analysis.cpp  main.cpp  methods.cpp  sa_analysis.cpp  test.cpp
EuclidianTSP/benchmarks/: benchmark.cpp  compare_tour.cpp  two_level_tree_tour.cpp  util.cpp
EuclidianTSP/config/: sa_analysis.json  sample_lk.json  sample_sa.json
EuclidianTSP/data/problem_sets/: 10k_more.txt  1k_more.txt  all.txt
EuclidianTSP/include/: geometry.hpp  tsp.hpp  tsp_ant_colony.hpp  tsp_bb_cities.hpp  tsp_convex_hull.hpp  tsp_farthest_insertion.hpp  tsp_lin_kernighan.hpp  tsp_lin_kernighan_base.hpp  tsp_lin_kernighan_old.hpp  tsp_local_search.hpp  tsp_nearest_insertion.hpp  tsp_nearest_neighbor.hpp  tsp_random_insertion.hpp  tsp_sa.hpp  tsp_shortest_edge.hpp  tsp_simplex_insertion.hpp  tsp_three_opt.hpp  tsp_tour.hpp  tsp_two_opt.hpp  tsp_two_opt_and_half.hpp  tsp_util.hpp
EuclidianTSP/include/benchmarks/: util.hpp
EuclidianTSP/include/lk/: lk_analysis.hpp  lk_base.hpp  lk_config.hpp  lk_interface.hpp  lk_permutation.hpp  lk_permutation_v1.hpp  lk_util.hpp  lk_value.hpp
EuclidianTSP/include/sa/: sa.hpp  sa_analysis.hpp  sa_config.hpp  sa_interface.hpp  sa_value.hpp
EuclidianTSP/include/test/tour/: tsp_two_level_tree.hpp
EuclidianTSP/include/tour/: tsp_tour.hpp  tsp_tour_reverse.hpp  tsp_two_level_tree_base.hpp  tsp_two_level_tree_tour.hpp  tsp_vector_tour.hpp
EuclidianTSP/notes/: lk_measures.md  measures.md  notes.md  report.odt  sa_measures.md
EuclidianTSP/other/: SOURCE.md  draft.cxx  draft_bb.cxx  sa
EuclidianTSP/other/ACOTSP-1.03/: README.md
EuclidianTSP/other/ACOTSP-1.03/data/: best.eil51  best.problem  cmp.eil51  cmp.problem  stat.eil51  stat.problem
EuclidianTSP/other/ACOTSP-1.03/src/: acotsp.c
EuclidianTSP/other/LKH-2.0.2/: README.md
EuclidianTSP/other/LKH-2.0.2/src/: Makefile
EuclidianTSP/other/SA_TSP/: AUTHOR_README  tsp.c
EuclidianTSP/scripts/: notes.md  notes.txt  rank.py  score.py  solver.py
EuclidianTSP/src/: geometry.cpp  main.cpp  tsp.cpp  tsp_bb_cities.cpp  tsp_nearest_insertion.cpp  tsp_nearest_neighbor.cpp
EuclidianTSP/test/: test.cpp  tsp_lin_kernighan_base.cpp
EuclidianTSP/test/lk/: lk_base.cpp  lk_permutation.cpp
EuclidianTSP/test/tour/: tsp_two_level_tree_base.cpp  tsp_two_level_tree_tour.cpp
EuclidianTSP/tsp/: tsp.hpp  tsp_ant_colony.hpp  tsp_convex_hull.hpp  tsp_farthest_insertion.hpp  tsp_nearest_insertion.hpp  tsp_nearest_neighbor.hpp  tsp_random_insertion.hpp  tsp_simplex_insertion.hpp
FacilityLocation/: CMakeLists.txt
FacilityLocation/include/: MFL.h  MFL_Gym.h  MFL_MIP.h  MFL_Mixed.h  MFL_TwoSwap.h
FacilityLocation/scripts/: obj_out.txt  picture.py  sol.txt  solver.py
FacilityLocation/src/: main.cpp
GraphColoring/: .gitignore  CMakeLists.txt  README.md
GraphColoring/app/: benchmark.cpp  ga_compare.cpp  lp.cpp  lp_compare.cpp  methods.cpp  sa.cpp  sa_compare.cpp  solver.cpp
GraphColoring/include/: ColoredGraph.hpp  FeasibleSwapper.hpp  GC.hpp  GC_Backtracking.hpp  GC_GA.hpp  GC_GA_Original.hpp  GC_HillClimbing.hpp  GC_KempeChain.hpp  GC_LP.hpp  GC_SA.hpp  GC_TabuSearch.hpp  GC_Tabucol.hpp  InfeasibleSwapper.hpp  KempeChain.hpp  util.hpp
GraphColoring/scripts/: notes.txt  rank.py  sa_cooling_schedules.py
GraphColoring/src/: GC_BB_NodeLevel.cpp
Knapsack/: CMakeLists.txt
Knapsack/app/: benchmark.cpp  lp.cpp  main.cpp  test.cpp
Knapsack/include/: CbcBranchUser.hpp  Knapsack.h  KnapsackOpt.h  branch_bound.h  branch_bound_fraction.h  knapsack.h  knapsack_opt.h  lp.hpp  support.h
Knapsack/scripts/: output.txt  solver.py
Knapsack/src/: main.cpp
Test/: notes.txt  solver.py
VehicleRouting/: CMakeLists.txt
VehicleRouting/include/: VRP.h  VRP_ACS.h  VRP_AS.h
VehicleRouting/scripts/: output.txt  picture.py  solver.py
VehicleRouting/src/: main.cpp
app/: solver.cpp
data/: output.txt  tsp_51_1.tsp
docs/: notes.md  sa.md
include/: ColoredGraph.hpp  GC_BB_NodeLevel.hpp  GC_GA.hpp  GC_Tabucol.hpp  geometry.hpp  tsp.hpp  tsp_convex_hull.hpp  tsp_farthest_insertion.hpp  tsp_nearest_neighbor.hpp  tsp_random_insertion.hpp  tsp_shortest_edge.hpp  tsp_simplex_insertion.hpp
other/: BranchAndBoundTechnique.cxx  BranchAndBoundTechnique.hpp  LinKernighan.cxx  LinKernighan.hpp  four_opt.cpp
scripts/: out_format.py  picture.py  tester.py  tsp_format.py
src/: CMakeLists.txt  ColoredGraph.cpp  ColoredGraph.h  FeasibleSwapper.cpp  FeasibleSwapper.h  GC.cpp  GC.h  GC_BB_NodeLevel.cpp  GC_BB_NodeLevel.h  GC_GA.h  GC_TabuSearch.cpp  GC_TabuSearch.h  GC_Tabucol.h  InfeasibleSwapper.cpp  InfeasibleSwapper.h  main.cpp  tsp_ant_colony.cpp  tsp_convex_hull.cpp  tsp_farthest_insertion.cpp  tsp_random_insertion.cpp  tsp_shortest_edge.cpp
test/: acotsp  best.problem  cmp.problem  input.txt.tsp  notes.txt  out.txt  output.txt  output.txt.lol  output2.txt  picture.py  solver.py  stat.problem
